--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -8,3 +8,14 @@
         font-size: 8pt;
       }
 }
+.otherLink{
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    margin: 5px;
+    background-color: white;
+    font-weight: bold;
+    font-size: 16pt;
+    border: none;
+    border-radius: 10px;
+}
